--- a/css/main.css
+++ b/css/main.css
@@ -1,49 +1,76 @@
-.body {
-  /* width: 1440px; */
-  /* height: 2060px; */
-  position: relative;
-  background: #f3f1f1;
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-.HeroSection {
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  /* width: fit-content; */
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+.heroSection {
   width: 100vw;
   height: 100vh;
-  left: 0px;
-  top: 0px;
-  position: absolute;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
   background: linear-gradient(180deg, #2f8280 0%, #1d7775 100%);
-  border-bottom-right-radius: 100px;
+  border-bottom-right-radius: 15vw;
   overflow: hidden;
 }
-.Navigation {
+.navigation {
   width: 100%;
-  top: 5em;
-  position: absolute;
-  left: 3em;
+  top: 12vh;
+  position: relative;
+  left: 3vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  z-index: 3;
+  position: fixed;
   /* background-color: #bbbe65; */
 }
 
-.MainNav {
-  width: 60%;
-  height: 4.25em;
+.mainNav {
+  width: 70%;
+  height: 12vh;
   background: #1d7775;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 100px;
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+  background: #2a7f7d;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 6vw;
+  display: flex;
+  position: sticky;
+  /* align-items: center; */
+  /* justify-content: space-evenly; */
+  z-index: 1;
+}
+.logo {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+}
+.logoIcon {
+  width: 6vw;
+  height: 12vh;
+  border-radius: 50%;
+  background-color: #bbbe65;
+}
+.navItems {
+  width: 80%;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  z-index: 1;
-  /* position: fixed; */
-}
-.Logo {
-  width: 60px;
-  height: 60px;
-  align-self: start;
-  border-radius: 117.5px;
-  background-color: #bbbe65;
+  justify-content: center;
+  /* background-color: #e36363; */
 }
 .NavLinks {
   list-style-type: none;
@@ -55,42 +82,42 @@
 
 .nav_links {
   color: white;
-  font-size: 20px;
+  font-size: 1.6vw;
   font-family: Space Grotesk;
   font-weight: 400;
   line-height: 24px;
   /* background-color: #4f6271; */
   margin-right: 1.5em;
 }
-.HeroDecos {
-  top: 199px;
-  width: 50%;
-  height: 500px;
-  /* left: 0px;   */
-  position: absolute;
-  background: rgba(79, 98, 113, 0.54);
-  border-top-right-radius: 260.5px;
+.mainHero {
+  height: 100vh;
+  /* background-color: #f81b9c; */
+  display: flex;
+  position: relative;
 }
-
 .HeroImgs {
-  width: 617.56px;
-  height: 571.53px;
-  left: 746px;
-  top: 49px;
+  width: 50%;
+  height: 90vh;
+  /* left: 50vw; Adjust the value as needed */
+  top: 9vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  position: absolute;
+  /* position: absolute; */
+  /* padding-right: 5em; */
   /* background-color: #df4d4d; */
 }
 
 .HeroImgs div {
-  width: 196.78px;
-  height: 380.53px;
-  border-top-left-radius: 80px;
-  border-top-right-radius: 80px;
-  border-bottom-left-radius: 80px;
+  width: 32%;
+  height: 67%;
+  border-top-left-radius: 7vw;
+  border-top-right-radius: 7vw;
+  border-bottom-left-radius: 7vw;
   border: 2px #bbbe65 solid;
+  display: flex;
+  flex-direction: row;
+  /* justify-content: space-between; */
   position: relative;
   background-position: center;
   background-size: cover;
@@ -98,81 +125,106 @@
 }
 
 .Img1 {
-  top: 10em;
+  top: 36vh;
   background-image: url(/images//v244_279.png);
 }
 .Img2 {
-  top: 6em;
+  top: 24vh;
   background-image: url(/images//v244_280.png);
 }
 .Img3 {
+  top: 6vh;
   /* left: 420.78px; */
   /* position: absolute; */
   background-image: url(/images/v244_278.png);
 }
+.heroLeft {
+  /* top: 12.9vh; */
+  width: 50%;
+  height: 100vh;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  /* left: 0px;   */
 
-.HeroText {
-  width: 554.23px;
-  height: 350px;
-  left: 178.92px;
-  top: 228px;
-  position: absolute;
+  position: relative;
+  /* background-color: #eb9090; */
+
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' preserveAspectRatio='xMidYMid slice' viewBox='10 10 80 80'%3E%3Cdefs%3E%3Cstyle%3E @keyframes rotate %7B 0%25 %7B transform: rotate(0deg); %7D 100%25 %7B transform: rotate(360deg); %7D %7D .out-top %7B animation: rotate 20s linear infinite; transform-origin: 13px 25px; %7D .in-top %7B animation: rotate 10s linear infinite; transform-origin: 13px 25px; %7D .out-bottom %7B animation: rotate 25s linear infinite; transform-origin: 84px 93px; %7D .in-bottom %7B animation: rotate 15s linear infinite; transform-origin: 84px 93px; %7D %3C/style%3E%3C/defs%3E%3Cpath fill=' %23D4D69F' class='out-top' d='M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z' /%3E%3Cpath fill='%23BBBE65' class='in-top' d='M20.6,4.1C11.6,1.5-1.9,2.5-8,11.2-16.3,23.1-8.2,45.6,7.4,50S42.1,38.9,41,24.5C40.2,14.1,29.4,6.6,20.6,4.1Z' /%3E%3Cpath fill='%2372AAA9' class='out-bottom' d='M105.9,48.6c-12.4-8.2-29.3-4.8-39.4.8-23.4,12.8-37.7,51.9-19.1,74.1s63.9,15.3,76-5.6c7.6-13.3,1.8-31.1-2.3-43.8C117.6,63.3,114.7,54.3,105.9,48.6Z' /%3E%3Cpath fill='%231D7775' class='in-bottom' d='M102,67.1c-9.6-6.1-22-3.1-29.5,2-15.4,10.7-19.6,37.5-7.6,47.8s35.9,3.9,44.5-12.5C115.5,92.6,113.9,74.6,102,67.1Z' /%3E%3C/svg%3E");
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+  border-top-right-radius: 26em;
+  /* border-top-left-radius: 260.5px; */
+  border-bottom-right-radius: 26em;
 }
-.hero_title {
-  width: 385.46px;
-  left: 0px;
-  top: 0px;
+
+.heroText {
+  /* top: 6em; */
+  top: 22.9vh;
+  width: 80%;
+  height: 80%;
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 7.3vh;
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  border-top-right-radius: 15vw;
+  border-top-left-radius: 15vw;
+  border-bottom-left-radius: 15vw;
+  box-shadow: 8px 3px 16px 0px rgba(0, 0, 0, 0.1);
+  /* justify-content: center; */
+  background: #e36363;
+}
+.heroDesc {
+  padding-left: 1.5em;
+  color: white;
+  font-size: 2vw;
+  font-weight: 200;
+  text-transform: lowercase;
+  line-height: 4vh;
+
+  word-wrap: break-word;
+}
+.heroTitle {
   text-align: center;
   color: #fffdfd;
-  font-size: 54px;
-
+  font-size: 4.5vw;
   font-weight: 500;
-  line-height: 50px;
-  word-wrap: break-word;
-}
-.hero_text {
-  width: 554.23px;
-  left: 0px;
-  top: 164px;
-  position: absolute;
-  color: white;
-  font-size: 29px;
-  font-weight: 347;
-  text-transform: lowercase;
-  line-height: 40px;
+  line-height: 1em;
   word-wrap: break-word;
 }
 
-.Arrow1 {
-  width: 80px;
-  height: 0px;
-  left: 258.64px;
-  top: 270px;
-  position: absolute;
-  transform: rotate(90deg);
-  transform-origin: 0 0;
-  border: 2px white solid;
+.arrowDown {
+  display: flex;
+  justify-content: center;
 }
 
 /* ========About ============ */
 .AboutSection {
   width: 100vw;
-  height: 100vh;
+  height: 112vh;
   left: 0px;
-  top: 634px;
-  padding-top: 3em;
-  position: absolute;
+  top: 100.4vh;
+  padding-top: 4em;
+  /* position: absolute; */
   /* background-color: rgb(250, 8, 177); */
 }
 
 .AboutUs {
-  width: 100%;
+  /* width: 100vw; */
   height: 100vh;
   left: 0px;
-  background: rgba(187, 190, 101, 0.616);
-  border-top-left-radius: 100px;
-  border-top-right-radius: 100px;
+  background: rgb(187, 190, 101);
+  border-top-left-radius: 15vw;
+  border-bottom-left-radius: 15vw;
+  /* border-bottom-left-radius: 10em; */
+  border-top-right-radius: 15em;
   display: flex;
   align-items: start;
   justify-content: center;
@@ -181,181 +233,174 @@
 }
 
 .abt_cta {
-  width: 130px;
-  height: 48px;
+  align-items: center;
+  background: #df4d4d;
+  border: 0 solid #e2e8f0;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  /* box-sizing: border-box; */
+  color: #fff;
+  display: inline-flex;
+  /* font-family: Inter, sans-serif; */
+  font-size: 2vw;
+  font-weight: 200;
+  height: 7.6vh;
+  justify-content: center;
+  line-height: 2.4vh;
+  overflow-wrap: break-word;
+  padding: 1vw;
+  text-decoration: none;
+  width: auto;
+  border-radius: 0.9vw;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
   /* position: absolute; */
 }
 
 .abt_title {
   color: #4f6271;
-  font-size: 54px;
-  font-family: Space Grotesk;
+  font-size: 5.4vw;
   font-weight: 500;
-  line-height: 50px;
+  line-height: 5vh;
 }
 
 .abt_text {
+  /* left: 20vh; */
   width: 50%;
   color: black;
-  font-size: 29px;
+  font-size: 1.8vw;
   font-family: Space Grotesk;
   font-weight: 347;
-  line-height: 40px;
+  line-height: 4.6vh;
   /* word-wrap: break-word; */
 }
 
 .AboutQuote {
-  width: 322px;
-  height: 55em;
-  left: 1000px;
-  top: 0px;
+  width: 20.1vw;
+  height: 130%;
+  left: 70%;
+  top: 86%;
   position: absolute;
   z-index: 1;
   background: #df4d4d;
-  border-top-left-radius: 200px;
-  border-top-right-radius: 200px;
-  border-bottom-left-radius: 200px;
+
+  border-top-left-radius: 12.5vw;
+  border-top-right-radius: 12.5vw;
+  border-bottom-left-radius: 12.5vw;
 }
 
 .AbtqImg {
-  width: 322px;
-  height: 484px;
-  left: 0px;
-  top: 166px;
+  width: 100%;
+  height: 70%;
+  left: 0;
+  margin-top: 44%;
   position: absolute;
-  border-top-left-radius: 150px;
-  border-top-right-radius: 150px;
-  border-bottom-right-radius: 150px;
+  border-top-left-radius: 12.5vw;
+  border-top-right-radius: 12.5vw;
+  border-bottom-right-radius: 12.5vw;
   background-image: url(/images/v255_6.png);
-  background-position: center;
+  background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25),
+    -5px -5px 10px rgba(0, 0, 0, 0.25);
   /* background-attachment: fixed; */
 }
 /* ============== Quote=============== */
 .PodQuote {
-  width: 1046px;
-  left: 197px;
-  top: 1497px;
-  position: absolute;
-  color: white;
-  font-size: 32px;
-  font-family: Space Grotesk;
-  font-weight: 347;
-  text-transform: lowercase;
-  line-height: 40px;
-  word-wrap: break-word;
-}
-.QuoteBg {
   width: 100vw;
-  height: 712px;
-  left: 0px;
-  top: 1348px;
-  position: absolute;
+  height: 70vh;
+  color: #f3f1f1;
+  margin-top: 2em;
+  display: flex;
+  font-size: 1.8vw;
+  align-items: center;
+  justify-content: center;
+  background-image: url(/images/v257_140.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   border-top-left-radius: 100px;
   border-top-right-radius: 100px;
+  background-attachment: fixed;
+}
+.PodQuote p {
+  width: 80%;
 }
 /* =========footer===== */
 .Footer {
   width: 100vw;
-  height: 242px;
-  left: 0px;
-  top: 1840px;
-  position: absolute;
-}
+  height: 30vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: #1d7775;
 
-.FooterBg {
-  width: 1440px;
-  height: 242px;
-  left: 0px;
-  top: 0px;
-  position: absolute;
-  background: #4f6271;
-  border-top-left-radius: 100px;
-  border-top-right-radius: 100px;
+  /* position: absolute; */
+}
+.contactSection {
+  width: 60vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .Copyright {
-  left: 638px;
-  top: 168px;
-  position: absolute;
   color: white;
-  font-size: 12px;
+  font-size: 0.9vw;
   font-family: Space Grotesk;
   font-weight: 400;
-  line-height: 40px;
-}
-
-.Socials {
-  width: 420px;
-  height: 94px;
-  left: 831px;
-  top: 74px;
-  position: absolute;
-}
-
-.SocialBg {
-  width: 420px;
-  height: 94px;
-  left: 0px;
-  top: 0px;
-  position: absolute;
-  background: #d9d9d9;
-  border-radius: 60px;
-}
-
-.Ellipse1,
-.Ellipse2,
-.Ellipse3 {
-  width: 74px;
-  height: 74px;
-  position: absolute;
-  background: #4f6271;
-  border-radius: 9999px;
-}
-
-.Ellipse1 {
-  left: 60px;
-  top: 10px;
-}
-.Ellipse2 {
-  left: 173px;
-  top: 10px;
-}
-.Ellipse3 {
-  left: 286px;
-  top: 10px;
+  line-height: 4vh;
 }
 
 .Contacts {
-  width: 420px;
-  height: 94px;
-  left: 145px;
-  top: 74px;
-  position: absolute;
+  width: 25vw;
+  height: 12vh;
+  align-items: center;
+  justify-content: space-evenly;
+  display: flex;
+  flex-direction: row;
+  /* left: 145px;
+  top: 74px; */
+  border-radius: 112px;
+  background: linear-gradient(145deg, #1a6b69, #1f7f7d);
+  box-shadow: 5px 5px 10px #1a6a68, -5px -5px 10px #208482;
+  border-radius: 60vw;
+  /* margin-right: 1em; */
+  /* position: absolute; */
 }
-
-.ContactBg {
-  width: 420px;
-  height: 94px;
-  left: 0px;
-  top: 0px;
-  position: absolute;
-  background: #d9d9d9;
-  border-radius: 60px;
+.Socials {
+  width: 25vw;
+  height: 12vh;
+  align-items: center;
+  justify-content: space-evenly;
+  display: flex;
+  flex-direction: row;
+  /* border-radius: 50%; */
+  border-radius: 112px;
+  background: linear-gradient(145deg, #1a6b69, #1f7f7d);
+  box-shadow: 5px 5px 10px #1a6a68, -5px -5px 10px #208482;
+  border-radius: 60vw;
+  /* left: 831px;
+  top: 74px; */
+  /* position: absolute; */
+}
+.socials_icon {
+  width: 4em;
+  height: 4em;
+  border-radius: 50%;
+  border-radius: 50%;
+  box-shadow: inset 27px 27px 35px #165c5a, inset -27px -27px 35px #249290;
 }
 
 .Mail,
 .Phone {
-  left: 20px;
-  position: absolute;
-  color: black;
-  font-size: 20px;
-  font-family: Space Grotesk;
+  color: #fff;
+  font-size: 1vw;
   font-weight: 400;
   text-transform: lowercase;
-  line-height: 40px;
-}
-.Phone {
-  left: 219px;
+  line-height: 40vh;
 }
