--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,28 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+::-webkit-scrollbar {
+  width: 0.6vw;
+}
+::-webkit-scrollbar-thumb {
+  background: #72aaa9;
+  /* box-shadow: inset 5px 5px 4px #b0b35f, inset -5px -5px 4px #c6c96b; */
+
+  border-radius: 0.3vw;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #8ebbba;
+  border: 0.5px solid #1d7775;
+  transition: 0.5s;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  /* background: #2a7f7d;
+  box-shadow: inset 5px 5px 4px #277776, inset -5px -5px 4px #2d8785; */
+  border-radius: 0.3vw;
+}
 body {
   margin: 0;
   padding: 0;
@@ -107,7 +129,6 @@ a {
   /* padding-right: 5em; */
   /* background-color: #df4d4d; */
 }
-
 .HeroImgs div {
   width: 32%;
   height: 67%;
@@ -216,7 +237,7 @@ a {
   /* background-color: rgb(250, 8, 177); */
 }
 
-.AboutUs {
+.aboutUs {
   /* width: 100vw; */
   height: 100vh;
   left: 0px;
@@ -224,7 +245,7 @@ a {
   border-top-left-radius: 15vw;
   border-bottom-left-radius: 15vw;
   /* border-bottom-left-radius: 10em; */
-  border-top-right-radius: 15em;
+  border-top-right-radius: 15vw;
   display: flex;
   align-items: start;
   justify-content: center;
@@ -234,34 +255,40 @@ a {
 
 .abt_cta {
   align-items: center;
-  background: #df4d4d;
-  border: 0 solid #e2e8f0;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  /* box-sizing: border-box; */
+  list-style: none;
   color: #fff;
-  display: inline-flex;
-  /* font-family: Inter, sans-serif; */
-  font-size: 2vw;
+  display: flex;
+  font-size: 1.6vh;
   font-weight: 200;
   height: 7.6vh;
-  justify-content: center;
+  justify-content: space-evenly;
   line-height: 2.4vh;
-  overflow-wrap: break-word;
   padding: 1vw;
   text-decoration: none;
   width: auto;
-  border-radius: 0.9vw;
+  border-radius: 0.9vh;
   cursor: pointer;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  /* position: absolute; */
+}
+.abt_cta li {
+  margin: 0.3em;
+  padding: 0.5em;
+  background-color: #e36363;
+  border-radius: 0.9vh;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+.abt_cta li:hover {
+  background-color: #df4d4d;
+  transform: scale(97%);
+  transition: 0.4s;
 }
 
 .abt_title {
   color: #4f6271;
-  font-size: 5.4vw;
+  font-size: 6vh;
   font-weight: 500;
   line-height: 5vh;
 }
@@ -270,14 +297,14 @@ a {
   /* left: 20vh; */
   width: 50%;
   color: black;
-  font-size: 1.8vw;
+  font-size: 1.8vh;
   font-family: Space Grotesk;
   font-weight: 347;
   line-height: 4.6vh;
   /* word-wrap: break-word; */
 }
 
-.AboutQuote {
+.aboutQuote {
   width: 20.1vw;
   height: 130%;
   left: 70%;
@@ -291,7 +318,7 @@ a {
   border-bottom-left-radius: 12.5vw;
 }
 
-.AbtqImg {
+.abtqImg {
   width: 100%;
   height: 70%;
   left: 0;
@@ -309,24 +336,24 @@ a {
   /* background-attachment: fixed; */
 }
 /* ============== Quote=============== */
-.PodQuote {
+.podQuote {
   width: 100vw;
   height: 70vh;
   color: #f3f1f1;
   margin-top: 2em;
   display: flex;
-  font-size: 1.8vw;
+  font-size: 1.8vh;
   align-items: center;
   justify-content: center;
   background-image: url(/images/v257_140.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  border-top-left-radius: 100px;
-  border-top-right-radius: 100px;
+  border-top-left-radius: 10vh;
+  border-top-right-radius: 10vh;
   background-attachment: fixed;
 }
-.PodQuote p {
+.podQuote p {
   width: 80%;
 }
 /* =========footer===== */
@@ -403,4 +430,311 @@ a {
   font-weight: 400;
   text-transform: lowercase;
   line-height: 40vh;
+}
+/* ==========general items =============== */
+.mainCard {
+  flex: 1;
+  height: 60vh;
+  width: 24vw;
+  margin: 0 1em;
+  background: #fff;
+  border-radius: 5vw 5vw 5vw 5vw;
+  background-color: #fffefe;
+  display: flex;
+  flex-direction: column;
+  /* padding-bottom: 1.7vw; */
+  overflow: hidden;
+  animation: drop-in 1200ms ease 500ms backwards;
+}
+.mainCard .img {
+  height: 60%;
+  width: 100%;
+
+  /* width: 100%; */
+}
+.mainCard .img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-top-left-radius: 5vw;
+  border-top-right-radius: 5vw;
+  border-bottom-left-radius: 5vw;
+}
+.mainCard .content {
+  height: 45%;
+  padding: 0.2vw 0.8vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-color: #165c5a; */
+}
+.mainCard .content .title {
+  font-size: 1.2vw;
+  font-weight: 600;
+}
+/* .card .content .sub-title {
+  font-size: 20px;
+  font-weight: 600;
+  color: #e74c3c;
+  line-height: 20px;
+} */
+.mainCard .content p {
+  font-size: small;
+  text-align: justify;
+  /* margin: 10px 0; */
+}
+.mainCard .content .btn {
+  display: block;
+  text-align: left;
+  margin: 10px 0;
+}
+.mainCard .content .btn button {
+  background: #e74c3c;
+  color: #fff;
+  border: none;
+  outline: none;
+  font-size: 1vw;
+  /* padding: 5px 8px; */
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.mainCard .content .btn button:hover {
+  transform: scale(0.9);
+}
+/* ======================= */
+/* ========================= */
+/* ========================== */
+@media screen and (max-width: 480px) {
+  .navigation {
+    width: 100%;
+    top: 1vh;
+    position: relative;
+    /* left: 3vw; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+    position: fixed;
+    background-color: #bbbe65;
+  }
+
+  .mainNav {
+    width: 96%;
+    height: 9vh;
+    background: #1d7775;
+    /* background: #2a7f7d; */
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+    /* border-radius: 12vw; */
+    display: flex;
+    position: sticky;
+    z-index: 1;
+  }
+  .nav_links {
+    color: white;
+    font-size: 1.6vh;
+    font-weight: 400;
+    line-height: 24px;
+    margin-right: 1em;
+  }
+  .logo {
+    width: 15%;
+    display: flex;
+    justify-content: center;
+    background-color: #a5b8b7;
+    border-radius: 50%;
+  }
+  .logoIcon {
+    background-color: #bbbe65;
+  }
+  .mainHero {
+    height: 100vh;
+    background-color: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+  .heroLeft {
+    width: 65vw;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    background: none;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+    /* border-top-right-radius: 26em; */
+    /* border-top-left-radius: 260.5px; */
+    /* border-bottom-right-radius: 26em; */
+    z-index: 1;
+  }
+
+  .heroText {
+    top: 0;
+    top: 9vh;
+    width: 90%;
+    height: 65%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* padding-top: 1.3vh; */
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    border-top-right-radius: 15vw;
+    border-top-left-radius: 15vw;
+    border-bottom-left-radius: 15vw;
+    box-shadow: 8px 3px 16px 0px rgba(0, 0, 0, 0.1);
+    /* justify-content: center; */
+    background: #e36363;
+  }
+  .heroDesc {
+    margin: 1em;
+    color: white;
+    font-size: 2vh;
+    font-weight: 200;
+    text-transform: lowercase;
+    line-height: 4vh;
+
+    word-wrap: break-word;
+  }
+  .heroTitle {
+    text-align: center;
+    color: #fffdfd;
+    font-size: 4.5vh;
+    font-weight: 600;
+    line-height: 1em;
+    word-wrap: break-word;
+  }
+  .HeroImgs {
+    width: 100%;
+    height: 100%;
+    /* left: 50vw; Adjust the value as needed */
+    top: 0;
+    display: flex;
+    /* flex-direction: row; */
+    /* align-items: center; */
+    justify-content: space-between;
+    /* position: absolute; */
+    /* padding-right: 5em; */
+    /* background-color: #d4c4c4; */
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' preserveAspectRatio='xMidYMid slice' viewBox='10 10 80 80'%3E%3Cdefs%3E%3Cstyle%3E @keyframes rotate %7B 0%25 %7B transform: rotate(0deg); %7D 100%25 %7B transform: rotate(360deg); %7D %7D .out-top %7B animation: rotate 20s linear infinite; transform-origin: 13px 25px; %7D .in-top %7B animation: rotate 10s linear infinite; transform-origin: 13px 25px; %7D .out-bottom %7B animation: rotate 25s linear infinite; transform-origin: 84px 93px; %7D .in-bottom %7B animation: rotate 15s linear infinite; transform-origin: 84px 93px; %7D %3C/style%3E%3C/defs%3E%3Cpath fill=' %23D4D69F' class='out-top' d='M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z' /%3E%3Cpath fill='%23BBBE65' class='in-top' d='M20.6,4.1C11.6,1.5-1.9,2.5-8,11.2-16.3,23.1-8.2,45.6,7.4,50S42.1,38.9,41,24.5C40.2,14.1,29.4,6.6,20.6,4.1Z' /%3E%3Cpath fill='%2372AAA9' class='out-bottom' d='M105.9,48.6c-12.4-8.2-29.3-4.8-39.4.8-23.4,12.8-37.7,51.9-19.1,74.1s63.9,15.3,76-5.6c7.6-13.3,1.8-31.1-2.3-43.8C117.6,63.3,114.7,54.3,105.9,48.6Z' /%3E%3Cpath fill='%231D7775' class='in-bottom' d='M102,67.1c-9.6-6.1-22-3.1-29.5,2-15.4,10.7-19.6,37.5-7.6,47.8s35.9,3.9,44.5-12.5C115.5,92.6,113.9,74.6,102,67.1Z' /%3E%3C/svg%3E");
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+  }
+  .HeroImgs div {
+    width: 32%;
+    height: 67%;
+    border-top-left-radius: 12vh;
+    border-top-right-radius: 12vh;
+    border-bottom-left-radius: 12vh;
+    border: 0.1em #bbbe65 solid;
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-between; */
+    position: relative;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .Img1 {
+    top: 42vh;
+    background-image: url(/images//v244_279.png);
+  }
+  .Img2 {
+    top: 18vh;
+    background-image: url(/images//v244_280.png);
+  }
+  .Img3 {
+    top: 3;
+    /* left: 420.78px; */
+    /* position: absolute; */
+    background-image: url(/images/v244_278.png);
+  }
+
+  /* ============= */
+  .AboutSection {
+    width: 100vw;
+    height: 100vh;
+    left: 0px;
+    top: 0;
+    padding-top: 6vh;
+    /* display: flex;
+    flex-direction: row;
+    justify-content: space-between; */
+    /* position: absolute; */
+    /* background-color: rgb(250, 8, 177); */
+  }
+  .aboutUs {
+    width: 100%;
+    height: 90vh;
+    left: 0px;
+    background: #bbbe65;
+    border-top-left-radius: 15vh;
+    border-bottom-left-radius: 15vh;
+    /* border-bottom-left-radius: 10em; */
+    border-top-right-radius: 15vh;
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    flex-direction: column;
+    padding-left: 3vw;
+  }
+  .abt_text {
+    width: 100%;
+    color: black;
+    font-size: 1.8vh;
+    font-weight: 347;
+    line-height: 4.6vh;
+  }
+  .abt_text p {
+    width: 75%;
+    padding: 0.3em;
+    /* background-color: #1a6a68; */
+  }
+  .aboutQuote {
+    width: 20.1vw;
+    height: 110%;
+    left: 80%;
+    top: 90vh;
+    position: absolute;
+    z-index: 1;
+    background: #df4d4d;
+
+    border-top-left-radius: 12.5vw;
+    border-top-right-radius: 12.5vw;
+    border-bottom-left-radius: 12.5vw;
+    z-index: 1;
+  }
+
+  .abtqImg {
+    width: 100%;
+    height: 70%;
+    left: 0;
+    margin-top: 44%;
+    position: absolute;
+    border-top-left-radius: 12.5vw;
+    border-top-right-radius: 12.5vw;
+    border-bottom-right-radius: 12.5vw;
+    background-image: url(/images/v255_6.png);
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25),
+      -5px -5px 10px rgba(0, 0, 0, 0.25);
+    /* background-attachment: fixed; */
+  }
+  /* ===================== */
+  .podQuote {
+    height: 40vh;
+  }
 }
