--- a/css/podcasts.css
+++ b/css/podcasts.css
@@ -23,11 +23,14 @@
   height: 160vh !important;
   overflow: visible !important;
   background: #bbbe65 !important;
+  margin-bottom: 10vh;
+  border-bottom-left-radius: 15vh;
 }
 .podHero {
   height: 80%;
   top: 22.9vh;
   flex-direction: column;
+
   /* background-color: bisque; */
 }
 .podcastsTitle {
@@ -59,8 +62,8 @@
   /* background-color: #1a6b69; */
 }
 .podLists {
-  width: 80%;
-  max-width: 80%;
+  width: 100%;
+  /* max-width: 80%; */
   height: 110vh;
   padding: 1em;
   display: flex;
@@ -69,16 +72,13 @@
   position: relative;
   overflow-y: scroll;
   border-bottom-left-radius: 12.5vw;
-  background-color: #bbbe65;
+  /* background-color: #1250d6; */
 }
 .podCard {
   position: relative;
-  width: 45vh;
+  width: 45vw;
   height: 45vh;
-  /* background: rgba(255, 255, 255, 0.05); */
   margin-bottom: 2vh;
-  /* box-shadow: 5 5px 55px rgba(0, 0, 0, 0.5);
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); */
   background: #bbbe65;
   box-shadow: -5px -5px 18px #999c53, 5px 5px 18px #dde077;
   border-radius: 15px;
@@ -122,14 +122,13 @@
   flex-direction: row;
   position: absolute;
   bottom: 5vh;
-  border-radius: 50%;
   background: linear-gradient(145deg, #1a6b69, #1f7f7d);
   box-shadow: 5px 5px 10px #202020;
   border-radius: 60vw;
   transition: 0.2s;
 }
 .ctaIcons h4 {
-  font-size: 1vw;
+  font-size: 1vh;
   color: #fff;
   font-weight: 300;
   margin: 0;
@@ -154,13 +153,9 @@
   transform: translateY(40px);
   transition: 0.4s;
   opacity: 0;
-  /* border-radius: 50%; */
-  /* background-color: #fff; */
-  /* border-radius: 50%; */
-  /* box-shadow: inset 27px 27px 35px #165c5a, inset -27px -27px 35px #249290; */
 }
 .cta_icon a {
-  font-size: 0.7vw;
+  font-size: 0.7vh;
   color: aliceblue;
 }
 
@@ -191,3 +186,50 @@
 }
 
 /* ===== */
+@media screen and (max-width: 480px) {
+  .podHero {
+    width: 100%;
+    /* background-color: #1a6b69; */
+    display: flex;
+    align-items: start !important;
+    justify-content: start !important;
+  }
+  .podContent {
+    /* */
+    width: 100vw;
+    /* height: 110vh; */
+    display: flex;
+    align-items: none !important;
+    /* align-content: stretch; */
+    justify-content: start;
+    overflow: visible;
+    /* background-color: #1250d6; */
+  }
+  .podLists {
+    width: 100%;
+    height: 110vh;
+    display: flex;
+    flex-wrap: wrap;
+    /* position: relative; */
+    padding: 0;
+    overflow-y: scroll;
+    border-bottom-left-radius: 12.5vw;
+    /* background-color: #0fdbdb; */
+  }
+  .podCard {
+    position: relative;
+    width: 45%;
+    height: 45%;
+    /* background: rgba(255, 255, 255, 0.05); */
+    margin-bottom: 2vh;
+    /* box-shadow: 5 5px 55px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); */
+    background: #bbbe65;
+    box-shadow: -5px -5px 18px #999c53, 5px 5px 18px #dde077;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(10px);
+  }
+}
