--- a/css/projects.css
+++ b/css/projects.css
@@ -3,9 +3,12 @@
   overflow: visible !important;
 }
 .projHero {
-  height: 80%;
+  height: 80vh;
   top: 22.9vh;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
+
   /* background-color: bisque; */
 }
 .projectsTitle {
@@ -26,21 +29,21 @@
   color: #f2f2f2;
 }
 .projSlider {
-  width: 100%;
+  width: 90%;
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: visible;
-  /* background-color: #e74c3c; */
 }
-.slider {
-  /* top: 10em; */
-  max-width: 80%;
+.cardList {
+  height: 80vh;
+  width: 90%;
   display: flex;
-  /* height: 120%; */
-  /* overflow: visible; */
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
   position: relative;
-}
+  overflow-y: scroll;
+  
 
 @keyframes drop-in {
   from {
@@ -53,9 +56,8 @@
   }
 }
 .mainCard {
-  /* flex: 1; */
-  height: 60vh;
-  width: 24vw;
+  width: 30vw;
+  height:60vh;
   margin: 0 1em;
   background: #fff;
   border-radius: 5vh 5vh 5vh 5vh;
@@ -66,7 +68,7 @@
   animation: drop-in 1200ms ease 500ms backwards;
 }
 .mainCard .img {
-  height: 60%;
+  height: 35vh;
   width: 100%;
 
   /* width: 100%; */
@@ -88,26 +90,26 @@
   /* background-color: #165c5a; */
 }
 .mainCard .content .title {
-  font-size: 2vh;
+  font-size: 3vh;
   font-weight: 600;
 }
 
 .mainCard .content p {
-  font-size: 1.3vh;
+  font-size: 2vh;
   text-align: justify;
   /* margin: 10px 0; */
 }
 .mainCard .content .btn {
   display: block;
   text-align: left;
-  margin: 10px 0;
+  margin: 1vh 0;
 }
 .mainCard .content .btn button {
   background: #e74c3c;
   color: #fff;
   border: none;
   outline: none;
-  font-size: 1vh;
+  font-size: 2vh;
   /* padding: 5px 8px; */
   border-radius: 5px;
   cursor: pointer;
@@ -140,9 +142,12 @@
 @media screen and (max-width: 480px) {
   .projHero {
     height: 80%;
-    top: 6.9vh;
     flex-direction: column;
-    /* background-color: bisque; */
+    padding: 0;
+  }
+  .projectsTitle {
+    margin: 0;
+    /* background-color: #e74c3c; */
   }
   .projectsTitle p {
     width: 90%;
@@ -150,36 +155,49 @@
     color: #f2f2f2;
   }
 
-  .slider {
-    max-width: 90vw;
+  .cardList {
+    width: 90vw;
+    height: 100vh;
     display: flex;
-    position: relative;
+    flex-direction: column;
+    /* padding: 2em; */
+    /* position: relative; */
+    /* background-color: #e74c3c; */
   }
   .mainCard {
     height: 40vh;
-    width: 35vw;
-    margin-right: 1em;
+    width: 90vw;
+    margin-bottom: 1em;
     /* background: #fff; */
     border-radius: 5vh 5vh 5vh 5vh;
     background-color: #fffefe;
     display: flex;
-    flex-direction: column;
-    overflow: hidden;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    /* overflow: hidden; */
     animation: drop-in 1200ms ease 500ms backwards;
   }
   .mainCard .img {
-    height: 70%;
-    width: 100%;
+    height: 100%;
+    width: 60%;
   }
   .mainCard .content {
-    height: 20%;
+    height: 80%;
+    width: 40%;
     padding: 0.2vh 0.8vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color: #165c5a; */
+    justify-content: center;
   }
   .mainCard .content p {
-    display: none;
+    height: 70%;
+    font-size: 1.3vh;
+
+    /* display: none; */
+  }
+  .mainCard .content .btn button {
+    font-size: 1.4vh;
   }
 }
