--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,6 @@
 }
 ::-webkit-scrollbar-thumb {
   background: #72aaa9;
-  /* box-shadow: inset 5px 5px 4px #b0b35f, inset -5px -5px 4px #c6c96b; */
-
   border-radius: 0.3vw;
 }
 
@@ -23,14 +21,16 @@
 }
 /* Track */
 ::-webkit-scrollbar-track {
-  /* background: #2a7f7d;
-  box-shadow: inset 5px 5px 4px #277776, inset -5px -5px 4px #2d8785; */
   border-radius: 0.3vw;
+}
+html {
+  scroll-behavior: smooth;
 }
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+
   /* width: fit-content; */
 }
 a {
@@ -45,12 +45,12 @@ a {
   /* align-items: center; */
   /* justify-content: center; */
   background: linear-gradient(180deg, #2f8280 0%, #1d7775 100%);
-  border-bottom-right-radius: 12vh;
+  /* border-bottom-right-radius: 12vh; */
   overflow: hidden;
 }
 .navigation {
   width: 100%;
-  top: 12vh;
+  top: 4vh;
   position: relative;
   left: 3vw;
   display: flex;
@@ -63,29 +63,34 @@ a {
 }
 
 .mainNav {
-  width: 70%;
+  width: 65%;
   height: 12vh;
   background: #1d7775;
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
   background: #2a7f7d;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
   border-radius: 12vh;
   display: flex;
   position: sticky;
-  /* align-items: center; */
-  /* justify-content: space-evenly; */
-  z-index: 1;
+  z-index: 4;
 }
 .logo {
   width: 20%;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: #202020; */
+}
+.logo a {
+  width: 5.2vw;
+  height: 5.2vw;
+  border-radius: 50%;
+  /* background-color: #bbbe65; */
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
 .logoIcon {
-  width: 6vw;
-  height: 12vh;
-  border-radius: 50%;
-  background-color: #bbbe65;
+  height: 100%;
 }
 .navItems {
   width: 80%;
@@ -113,8 +118,10 @@ a {
 }
 .mainHero {
   height: 100vh;
+  width: 100%;
   display: flex;
   position: relative;
+  /* background-color: #bbbe65; */
 }
 .HeroImgs {
   width: 50%;
@@ -124,8 +131,8 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /* position: absolute; */
-  /* padding-right: 5em; */
+  position: relative;
+  padding-right: 2em;
   /* background-color: #df4d4d; */
 }
 .HeroImgs div {
@@ -159,70 +166,71 @@ a {
   background-image: url(/images/v244_278.png);
 }
 .heroLeft {
-  /* top: 12.9vh; */
   width: 50%;
   height: 100vh;
   display: flex;
-  /* align-items: center; */
+  position: absolute;
   justify-content: center;
-  /* left: 0px;   */
-
   position: relative;
-  /* background-color: #eb9090; */
-
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' preserveAspectRatio='xMidYMid slice' viewBox='10 10 80 80'%3E%3Cdefs%3E%3Cstyle%3E @keyframes rotate %7B 0%25 %7B transform: rotate(0deg); %7D 100%25 %7B transform: rotate(360deg); %7D %7D .out-top %7B animation: rotate 20s linear infinite; transform-origin: 13px 25px; %7D .in-top %7B animation: rotate 10s linear infinite; transform-origin: 13px 25px; %7D .out-bottom %7B animation: rotate 25s linear infinite; transform-origin: 84px 93px; %7D .in-bottom %7B animation: rotate 15s linear infinite; transform-origin: 84px 93px; %7D %3C/style%3E%3C/defs%3E%3Cpath fill=' %23D4D69F' class='out-top' d='M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z' /%3E%3Cpath fill='%23BBBE65' class='in-top' d='M20.6,4.1C11.6,1.5-1.9,2.5-8,11.2-16.3,23.1-8.2,45.6,7.4,50S42.1,38.9,41,24.5C40.2,14.1,29.4,6.6,20.6,4.1Z' /%3E%3Cpath fill='%2372AAA9' class='out-bottom' d='M105.9,48.6c-12.4-8.2-29.3-4.8-39.4.8-23.4,12.8-37.7,51.9-19.1,74.1s63.9,15.3,76-5.6c7.6-13.3,1.8-31.1-2.3-43.8C117.6,63.3,114.7,54.3,105.9,48.6Z' /%3E%3Cpath fill='%231D7775' class='in-bottom' d='M102,67.1c-9.6-6.1-22-3.1-29.5,2-15.4,10.7-19.6,37.5-7.6,47.8s35.9,3.9,44.5-12.5C115.5,92.6,113.9,74.6,102,67.1Z' /%3E%3C/svg%3E");
-
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
   border-top-right-radius: 26em;
-  /* border-top-left-radius: 260.5px; */
   border-bottom-right-radius: 26em;
 }
 
 .heroText {
-  /* top: 6em; */
   top: 22.9vh;
-  width: 80%;
-  height: 80%;
+  left: 15vw;
+  width: 90%;
+  height: 70%;
   position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 7.3vh;
-  font-family: "Oswald", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: normal;
-  border-top-right-radius: 15vw;
-  border-top-left-radius: 15vw;
-  border-bottom-left-radius: 15vw;
+  border-top-right-radius: 9vw;
+  border-top-left-radius: 6vw;
+  border-bottom-left-radius: 6vw;
   box-shadow: 8px 3px 16px 0px rgba(0, 0, 0, 0.1);
   /* justify-content: center; */
-  background: #e36363;
-}
-.heroDesc {
-  padding-left: 1.5em;
-  color: white;
-  font-size: 2vw;
-  font-weight: 200;
-  text-transform: lowercase;
-  line-height: 4vh;
-
-  word-wrap: break-word;
+  /* background: #e36363; */
+  background-image: linear-gradient(
+    to right,
+    rgba(223, 77, 77, 1),
+    rgba(223, 77, 77, 1),
+    rgba(223, 77, 77, 0.8),
+    rgba(227, 99, 99, 0.4),
+    rgba(128, 128, 128, 0.3)
+  );
+  z-index: 2;
 }
 .heroTitle {
   text-align: center;
   color: #fffdfd;
   font-size: 4.5vw;
-  font-weight: 500;
-  line-height: 1em;
+  font-weight: 450;
+  line-height: 0.9em;
+}
+.heroDesc p {
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  text-align: center;
+  color: white;
+  font-size: 1.5vw;
+  font-weight: 200;
+  text-transform: lowercase;
+  line-height: 4vh;
   word-wrap: break-word;
 }
 
 .arrowDown {
   display: flex;
   justify-content: center;
+}
+.arrowDown:hover {
+  transform: scale(120%, 100%);
 }
 
 /* ========About ============ */
@@ -232,32 +240,40 @@ a {
   left: 0px;
   top: 100.4vh;
   padding-top: 4em;
-  /* position: absolute; */
-  /* background-color: rgb(250, 8, 177); */
 }
 
 .aboutUs {
-  /* width: 100vw; */
   height: 100vh;
   left: 0px;
-  background: rgb(187, 190, 101);
-  border-top-left-radius: 15vw;
-  border-bottom-left-radius: 15vw;
-  /* border-bottom-left-radius: 10em; */
-  border-top-right-radius: 15vw;
+  /* background: rgb(187, 190, 101); */
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='720' preserveAspectRatio='none' viewBox='0 0 1440 720'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1105%26quot%3b)' fill='none'%3e%3crect width='1440' height='720' x='0' y='0' fill='rgba(187%2c 190%2c 101%2c 1)'%3e%3c/rect%3e%3cpath d='M0%2c394.029C72.954%2c399.669%2c134.593%2c344.736%2c195.196%2c303.731C254.479%2c263.619%2c324.227%2c226.407%2c347.681%2c158.781C370.719%2c92.353%2c330.322%2c23.42%2c316.305%2c-45.478C303.217%2c-109.809%2c299.392%2c-174.602%2c268.113%2c-232.321C230.839%2c-301.103%2c191.152%2c-375.937%2c119.817%2c-408.058C45.587%2c-441.482%2c-43.757%2c-436.78%2c-119.458%2c-406.836C-192.298%2c-378.023%2c-242.183%2c-312.707%2c-285.771%2c-247.622C-325.323%2c-188.563%2c-344.462%2c-121.275%2c-357.495%2c-51.4C-371.044%2c21.238%2c-398.669%2c101.078%2c-362.867%2c165.716C-327.285%2c229.956%2c-238.873%2c235.869%2c-176.717%2c274.977C-115.358%2c313.584%2c-72.278%2c388.441%2c0%2c394.029' fill='%23abae49'%3e%3c/path%3e%3cpath d='M1440 1299.1689999999999C1548.637 1282.129 1651.565 1252.379 1746.741 1197.298 1845.741 1140.003 1956.98 1081.694 1999.358 975.45 2041.309 870.2760000000001 1988.076 755.498 1967.368 644.176 1947.5729999999999 537.766 1940.592 428.268 1880.788 338.055 1816.029 240.368 1725.939 160.13800000000003 1617.313 116.12699999999995 1502.043 69.42399999999998 1374.485 56.28800000000001 1253.188 83.77499999999998 1127.266 112.30999999999995 997.403 166.721 924.324 273.164 853.286 376.635 891.709 514.377 872.414 638.394 852.824 764.303 774.728 885.26 810.041 1007.693 846.888 1135.445 943.816 1248.482 1064.4850000000001 1304.3139999999999 1180.445 1357.9679999999998 1313.772 1318.9679999999998 1440 1299.1689999999999' fill='%23c9cb84'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1105'%3e%3crect width='1440' height='720' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   align-items: start;
   justify-content: center;
   flex-direction: column;
   padding-left: 5em;
 }
+.abt_title {
+  font-size: 4.5vw;
+  font-weight: 450;
+}
 
+.abt_text {
+  width: 60%;
+  margin-left: 2em;
+  color: #202020;
+  font-size: 1.5vw;
+  font-family: Space Grotesk;
+  line-height: 5vh;
+}
 .abt_cta {
   align-items: center;
   list-style: none;
   color: #fff;
   display: flex;
-  font-size: 1.6vh;
+  font-size: 1.6vw;
   font-weight: 200;
   height: 7.6vh;
   justify-content: space-evenly;
@@ -283,24 +299,6 @@ a {
   background-color: #df4d4d;
   transform: scale(97%);
   transition: 0.4s;
-}
-
-.abt_title {
-  color: #4f6271;
-  font-size: 6vh;
-  font-weight: 500;
-  line-height: 5vh;
-}
-
-.abt_text {
-  /* left: 20vh; */
-  width: 50%;
-  color: black;
-  font-size: 1.8vh;
-  font-family: Space Grotesk;
-  font-weight: 347;
-  line-height: 4.6vh;
-  /* word-wrap: break-word; */
 }
 
 .aboutQuote {
@@ -337,28 +335,37 @@ a {
 /* ============== Quote=============== */
 .podQuote {
   width: 100vw;
-  height: 70vh;
+  height: 90vh;
   color: #f3f1f1;
-  margin-top: 2em;
   display: flex;
-  font-size: 1.8vh;
+  align-items: center;
+  justify-content: center;
+  /* background-color: #1a6b69; */
+}
+.quoteBG {
+  height: 70vh;
+  width: 98%;
+  display: flex;
   align-items: center;
   justify-content: center;
   background-image: url(/images/v257_140.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  border-top-left-radius: 10vh;
-  border-top-right-radius: 10vh;
+  border-top-left-radius: 9vw;
+  border-top-right-radius: 9vw;
+  border-bottom-left-radius: 9vw;
+  border-bottom-right-radius: 9vw;
   background-attachment: fixed;
 }
-.podQuote p {
+.quoteBG p {
   width: 80%;
+  font-size: 1.8vw;
 }
 /* =========footer===== */
 .footer {
   width: 100vw;
-  height: 30vh;
+  height: 33vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -368,39 +375,34 @@ a {
   /* position: absolute; */
 }
 .contactSection {
-  width: 70vw;
+  width: 80vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /* background-color: #df4d4d; */
 }
 
 .Copyright {
-  color: white;
-  font-size: 1vh;
+  color: #bbbe65;
+  font-size: 1vw;
   font-family: Space Grotesk;
   font-weight: 400;
   line-height: 4vh;
 }
 
 .Contacts {
-  width: 25vw;
+  width: 35vw;
   height: 12vh;
   align-items: center;
   justify-content: space-evenly;
   display: flex;
   flex-direction: row;
-  /* left: 145px;
-  top: 74px; */
-  border-radius: 112px;
+  border-radius: 12em;
   background: linear-gradient(145deg, #1a6b69, #1f7f7d);
   box-shadow: 5px 5px 10px #1a6a68, -5px -5px 10px #208482;
   border-radius: 60vw;
-  /* margin-right: 1em; */
-  /* position: absolute; */
 }
 .Socials {
-  width: 25vw;
+  width: 35vw;
   height: 12vh;
   align-items: center;
   justify-content: space-evenly;
@@ -414,17 +416,26 @@ a {
   /* position: absolute; */
 }
 .socials_icon {
-  width: 5em;
-  height: 83%;
+  height: 5vw;
+  width: 5vw;
   border-radius: 50%;
-
   box-shadow: inset 27px 27px 35px #165c5a, inset -27px -27px 35px #249290;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.socials_icon a {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .Mail,
 .Phone {
   color: #fff;
-  font-size: 1.8vh;
+  font-size: 1.2vw;
   font-weight: 400;
   text-transform: lowercase;
   line-height: 40vh;
@@ -692,12 +703,5 @@ a {
     font-weight: 400;
     text-transform: lowercase;
     line-height: 0;
-  }
-  .socials_icon {
-    width: 5em;
-    height: 83%;
-    border-radius: 50%;
-
-    box-shadow: inset 27px 27px 35px #165c5a, inset -27px -27px 35px #249290;
   }
 }
