--- a/css/projects.css
+++ b/css/projects.css
@@ -1,15 +1,16 @@
 .projects {
-  height: 120vh !important;
+  height: 140vh !important;
   overflow: visible !important;
+  background-image: url("/images/blob-scene-haikei.svg") !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  margin-bottom: 10vh;
+  /* background-position: center; */
 }
 .projHero {
-  height: 80vh;
-  top: 22.9vh;
-  justify-content: center;
-  align-items: center;
+  height: 80%;
+  top: 18vh;
   flex-direction: column;
-
-  /* background-color: bisque; */
 }
 .projectsTitle {
   width: 100%;
@@ -21,30 +22,32 @@
 .projectsTitle .title {
   width: 80%;
   color: #f2f2f2;
-  font-size: 3vh;
+  font-size: 4.5vw;
 }
 .projectsTitle p {
   width: 70%;
+  font-size: 1.2vw;
   text-align: left;
   color: #f2f2f2;
 }
 .projSlider {
-  width: 90%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: scroll;
 }
 .cardList {
-  height: 80vh;
+  height: 100%;
   width: 90%;
   display: flex;
-  flex-direction: row;
+
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
   position: relative;
   overflow-y: scroll;
-  
-
+}
 @keyframes drop-in {
   from {
     opacity: 0;
@@ -56,19 +59,18 @@
   }
 }
 .mainCard {
-  width: 30vw;
-  height:60vh;
-  margin: 0 1em;
+  width: 27%;
+  height: 65vh;
+  margin-bottom: 4vh;
+  position: relative;
   background: #fff;
-  border-radius: 5vh 5vh 5vh 5vh;
-  background-color: #fffefe;
+  border-radius: 1.5em;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   animation: drop-in 1200ms ease 500ms backwards;
 }
 .mainCard .img {
-  height: 35vh;
+  height: 33vh;
   width: 100%;
 
   /* width: 100%; */
@@ -77,41 +79,38 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
-  border-top-left-radius: 5vh;
-  border-top-right-radius: 5vh;
-  border-bottom-left-radius: 5vh;
+  border-top-left-radius: 1.5em;
+  border-top-right-radius: 1.5em;
+  border-bottom-left-radius: 1.5em;
 }
 .mainCard .content {
   height: 45%;
-  padding: 0.2vh 0.8vh;
+  padding: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background-color: #165c5a; */
 }
 .mainCard .content .title {
-  font-size: 3vh;
+  font-size: 1.8vw;
   font-weight: 600;
 }
 
 .mainCard .content p {
-  font-size: 2vh;
+  font-size: 1vw;
   text-align: justify;
-  /* margin: 10px 0; */
 }
 .mainCard .content .btn {
   display: block;
   text-align: left;
-  margin: 1vh 0;
+  margin-bottom: 1em;
 }
 .mainCard .content .btn button {
   background: #e74c3c;
   color: #fff;
   border: none;
   outline: none;
-  font-size: 2vh;
-  /* padding: 5px 8px; */
-  border-radius: 5px;
+  font-size: 1.2vw;
+  border-radius: 0.5em;
   cursor: pointer;
   transition: 0.2s;
 }
