--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,6 @@ a {
 .HeroImgs {
   width: 50%;
   height: 90vh;
-  /* left: 50vw; Adjust the value as needed */
   top: 9vh;
   display: flex;
   flex-direction: row;
@@ -194,8 +193,7 @@ a {
   border-top-left-radius: 6vw;
   border-bottom-left-radius: 6vw;
   box-shadow: 8px 3px 16px 0px rgba(0, 0, 0, 0.1);
-  /* justify-content: center; */
-  /* background: #e36363; */
+
   background-image: linear-gradient(
     to right,
     rgba(223, 77, 77, 1),
@@ -381,10 +379,9 @@ a {
   justify-content: space-between;
 }
 
-.Copyright {
+.copyright {
   color: #bbbe65;
   font-size: 1vw;
-  font-family: Space Grotesk;
   font-weight: 400;
   line-height: 4vh;
 }
@@ -448,7 +445,7 @@ a {
 @media screen and (max-width: 480px) {
   .navigation {
     width: 90%;
-    top: 1vh;
+    top: 5vh;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -456,43 +453,23 @@ a {
     justify-content: center;
     z-index: 3;
     position: fixed;
-    /* background-color: #bbbe65; */
   }
 
   .mainNav {
     width: 96%;
-    height: 9vh;
+    height: 6.9vh;
     background: #1d7775;
-    /* background: #2a7f7d; */
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
-    /* border-radius: 12vw; */
     display: flex;
     position: sticky;
     z-index: 1;
   }
-  .nav_links {
-    color: white;
-    font-size: 1.3vh;
-    font-weight: 400;
-    line-height: 2.4em;
-    margin-right: 1em;
+  .logo a {
+    width: 5vh;
+    height: 5vh;
   }
-  .logo {
-    width: 20%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0.2em;
-    /* background-color: #a5b8b7; */
-    /* border-radius: 50%; */
-  }
-  .logoIcon {
-    width: 85%;
-    height: 90%;
-    border-radius: 50%;
-    margin: 0.2em;
-    /* background-color: #bbbe65; */
+  .nav_links a {
+    font-size: 3vw;
   }
 
   .mainHero {
@@ -504,7 +481,7 @@ a {
     position: relative;
   }
   .heroLeft {
-    width: 65vw;
+    width: 85vw;
     height: 60vh;
     top: 30vh;
     display: flex;
@@ -512,7 +489,6 @@ a {
     justify-content: center;
     position: absolute;
     background: none;
-
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -521,34 +497,16 @@ a {
   }
 
   .heroText {
-    /* top: 0; */
     top: 0;
-    width: 90%;
-    height: 100%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    font-family: "Oswald", sans-serif;
-    font-optical-sizing: auto;
+    left: 0;
+    width: 80vw;
+    height: 80%;
     font-weight: 700;
     font-style: normal;
-    border-top-right-radius: 15vw;
-    border-top-left-radius: 15vw;
-    border-bottom-left-radius: 15vw;
-    background-color: #df4d4dec;
-    /* backdrop-filter: blur(6px); */
-  }
-  .heroDesc {
-    margin: 1em;
-    color: white;
-    font-size: 2vh;
-    font-weight: 200;
-    text-transform: lowercase;
-    line-height: 4vh;
-
-    word-wrap: break-word;
+    border-top-right-radius: 9vh;
+    border-top-left-radius: 9vh;
+    border-bottom-left-radius: 9vh;
+    background-color: rgba(223, 77, 77);
   }
   .heroTitle {
     text-align: center;
@@ -558,129 +516,88 @@ a {
     line-height: 1em;
     word-wrap: break-word;
   }
+  .heroDesc p {
+    font-size: 3.6vw;
+  }
+
   .HeroImgs {
-    width: 100%;
+    width: 100vw;
     height: 100%;
-    /* left: 50vw; Adjust the value as needed */
     top: 0;
     display: flex;
-    /* flex-direction: row; */
-    /* align-items: center; */
     justify-content: space-between;
-    /* position: absolute; */
-    /* padding-right: 5em; */
-    /* background-color: #d4c4c4; */
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' preserveAspectRatio='xMidYMid slice' viewBox='10 10 80 80'%3E%3Cdefs%3E%3Cstyle%3E @keyframes rotate %7B 0%25 %7B transform: rotate(0deg); %7D 100%25 %7B transform: rotate(360deg); %7D %7D .out-top %7B animation: rotate 20s linear infinite; transform-origin: 13px 25px; %7D .in-top %7B animation: rotate 10s linear infinite; transform-origin: 13px 25px; %7D .out-bottom %7B animation: rotate 25s linear infinite; transform-origin: 84px 93px; %7D .in-bottom %7B animation: rotate 15s linear infinite; transform-origin: 84px 93px; %7D %3C/style%3E%3C/defs%3E%3Cpath fill=' %23D4D69F' class='out-top' d='M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z' /%3E%3Cpath fill='%23BBBE65' class='in-top' d='M20.6,4.1C11.6,1.5-1.9,2.5-8,11.2-16.3,23.1-8.2,45.6,7.4,50S42.1,38.9,41,24.5C40.2,14.1,29.4,6.6,20.6,4.1Z' /%3E%3Cpath fill='%2372AAA9' class='out-bottom' d='M105.9,48.6c-12.4-8.2-29.3-4.8-39.4.8-23.4,12.8-37.7,51.9-19.1,74.1s63.9,15.3,76-5.6c7.6-13.3,1.8-31.1-2.3-43.8C117.6,63.3,114.7,54.3,105.9,48.6Z' /%3E%3Cpath fill='%231D7775' class='in-bottom' d='M102,67.1c-9.6-6.1-22-3.1-29.5,2-15.4,10.7-19.6,37.5-7.6,47.8s35.9,3.9,44.5-12.5C115.5,92.6,113.9,74.6,102,67.1Z' /%3E%3C/svg%3E");
 
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: top;
   }
   .HeroImgs div {
     width: 32%;
-    height: 67%;
+    height: 47%;
     border-top-left-radius: 12vh;
     border-top-right-radius: 12vh;
     border-bottom-left-radius: 12vh;
     border: 0.1em #bbbe65 solid;
-    display: flex;
-    flex-direction: row;
-    /* justify-content: space-between; */
-    position: relative;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
   }
   .Img1 {
     top: 42vh;
-    background-image: url(/images//v244_279.png);
   }
   .Img2 {
     top: 18vh;
-    background-image: url(/images//v244_280.png);
   }
   .Img3 {
     top: 3;
-    /* left: 420.78px; */
-    /* position: absolute; */
-    background-image: url(/images/v244_278.png);
   }
 
   /* ============= */
   .AboutSection {
     width: 100vw;
     height: 100vh;
-    left: 0px;
+    left: 0;
     top: 0;
     padding-top: 6vh;
   }
   .aboutUs {
     width: 100%;
     height: 90vh;
-    left: 0px;
-    background: #bbbe65;
-    border-top-left-radius: 0;
-    border-top-right-radius: 15vh;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 15vh;
-    display: flex;
-
-    flex-direction: column;
-    padding-left: 3vw;
+    border-top-left-radius: 3vh;
+    border-top-right-radius: 3vh;
+    border-bottom-left-radius: 3vh;
+    border-bottom-right-radius: 3vh;
+    padding-left: 1.5vw;
     z-index: 4;
   }
+  .abt_title {
+    font-size: 4.5vh;
+  }
   .abt_text {
-    width: 100%;
+    width: 90%;
     color: black;
     font-size: 1.6vh;
     font-weight: 347;
-    line-height: 4.6vh;
-    /*  */
-  }
-  .abt_text p {
-    width: 75%;
-    padding: 0.3em;
-    z-index: 3;
-    /* background-color: #1a6a68; */
-  }
-  .aboutQuote {
-    width: 20.1vw;
-    height: 110%;
-    left: 80%;
-    top: 90vh;
-    position: absolute;
-    z-index: 1;
-    background: #df4d4d;
-    border-top-left-radius: 12.5vw;
-    border-top-right-radius: 12.5vw;
-    border-bottom-left-radius: 12.5vw;
-    z-index: 0;
   }
 
-  .abtqImg {
-    width: 100%;
-    height: 70%;
-    left: 0;
-    margin-top: 44%;
-    position: absolute;
-    border-top-left-radius: 12.5vw;
-    border-top-right-radius: 12.5vw;
-    border-bottom-right-radius: 12.5vw;
-    background-image: url(/images/v255_6.png);
-    background-position: top;
-    background-size: cover;
-    background-repeat: no-repeat;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25),
-      -5px -5px 10px rgba(0, 0, 0, 0.25);
-    /* background-attachment: fixed; */
+  .aboutQuote {
+    display: none;
   }
+  .abt_cta {
+    font-size: 1.5vh;
+  }
+
   /* ===================== */
   .podQuote {
-    height: 40vh;
+    height: 30vh;
+  }
+  .quoteBG {
+    height: 90%;
+  }
+  .quoteBG p {
+    font-size: 1.8vh;
   }
   /* =================== */
-  .Footer {
-    height: 10vh;
+  .footer {
+    height: 20vh;
   }
   .contactSection {
     width: 100vw;
@@ -692,16 +609,23 @@ a {
     width: 48%;
     height: 6vh;
   }
+  .socials_icon {
+    height: 5vh;
+    width: 5vh;
+  }
+  .socials_icon a {
+    height: 3vh;
+    width: 3vh;
+  }
   .Contacts {
     width: 48%;
     height: 6vh;
   }
   .Mail,
   .Phone {
-    color: #fff;
     font-size: 1vh;
-    font-weight: 400;
-    text-transform: lowercase;
-    line-height: 0;
+  }
+  .copyright {
+    font-size: 1vh;
   }
 }
