--- a/css/main.css
+++ b/css/main.css
@@ -152,11 +152,12 @@ a {
 
 .Img1 {
   top: 36vh;
-  background-image: url(/images//v244_279.png);
+  background-image: url(/images//v244_279.jpg);
+  /* z-index: 5; */
 }
 .Img2 {
   top: 24vh;
-  background-image: url(/images//v244_280.png);
+  background-image: url(/images/v244_280.jpg);
 }
 .Img3 {
   top: 6vh;
@@ -322,7 +323,7 @@ a {
   border-top-left-radius: 12.5vw;
   border-top-right-radius: 12.5vw;
   border-bottom-right-radius: 12.5vw;
-  background-image: url(/images/v255_6.png);
+  background-image: url(/images/v255_6.jpg);
   background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
@@ -346,7 +347,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url(/images/v257_140.png);
+  background-image: url(/images//v257_140.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -481,9 +482,9 @@ a {
     position: relative;
   }
   .heroLeft {
-    width: 85vw;
-    height: 60vh;
-    top: 30vh;
+    width: 95vw;
+    height: 70vh;
+    top: 20vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -493,25 +494,26 @@ a {
     background-size: cover;
     background-position: bottom;
     border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    /* background-color: #10ebe7; */
+    background-image: url("/images/ddftgtr.svg");
     z-index: 1;
+    background-position: top;
+    background-size: contain;
   }
 
   .heroText {
     top: 0;
     left: 0;
     width: 80vw;
-    height: 80%;
-    font-weight: 700;
-    font-style: normal;
-    border-top-right-radius: 9vh;
-    border-top-left-radius: 9vh;
-    border-bottom-left-radius: 9vh;
-    background-color: rgba(223, 77, 77);
+    position: relative;
+    background: none;
+    box-shadow: none;
   }
   .heroTitle {
     text-align: center;
     color: #fffdfd;
-    font-size: 4.5vh;
+    font-size: 4.2vh;
     font-weight: 600;
     line-height: 1em;
     word-wrap: break-word;
