--- a/css/projects.css
+++ b/css/projects.css
@@ -120,7 +120,7 @@
 
 /* ================ */
 .projQuote {
-  background-image: url(/images/v244_280.png) !important;
+  background-image: url(/images//v244_280.jpg) !important;
   background-color: #000000bb;
   display: flex;
   justify-content: space-evenly !important;
